// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeScaffold > does not create a symlink when paths.symlink is omitted 1`] = `
[
  0,
  {},
  {
    "usr": [
      0,
      {},
      {
        "lib": [
          0,
          {},
          {
            "open-orpheus": [
              0,
              {},
              {
                "open-orpheus": [
                  1,
                  {},
                  Uint8Array [
                    102,
                    97,
                    107,
                    101,
                    45,
                    98,
                    105,
                    110,
                    97,
                    114,
                    121,
                  ],
                ],
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`writeScaffold > honours custom paths, appName and executable 1`] = `
[
  0,
  {},
  {
    "opt": [
      0,
      {},
      {
        "bin": [
          0,
          {},
          {
            "my-app": [
              2,
              {
                "target": "../my-app/foo",
              },
            ],
          },
        ],
        "my-app": [
          0,
          {},
          {
            "foo": [
              1,
              {},
              Uint8Array [
                102,
                97,
                107,
                101,
                45,
                98,
                105,
                110,
                97,
                114,
                121,
              ],
            ],
            "icons": [
              0,
              {},
              {
                "scalable": [
                  0,
                  {},
                  {
                    "apps": [
                      0,
                      {},
                      {
                        "my-app.svg": [
                          1,
                          {},
                          Uint8Array [
                            60,
                            115,
                            118,
                            103,
                            62,
                            60,
                            47,
                            115,
                            118,
                            103,
                            62,
                          ],
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
            "my-app.desktop": [
              1,
              {},
              Uint8Array [
                91,
                68,
                101,
                115,
                107,
                116,
                111,
                112,
                32,
                69,
                110,
                116,
                114,
                121,
                93,
                10,
                69,
                120,
                101,
                99,
                61,
                102,
                111,
                111,
                10,
              ],
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`writeScaffold > writes the full install layout using default paths 1`] = `
[
  0,
  {},
  {
    "usr": [
      0,
      {},
      {
        "bin": [
          0,
          {},
          {
            "open-orpheus": [
              2,
              {
                "target": "../lib/open-orpheus/open-orpheus",
              },
            ],
          },
        ],
        "lib": [
          0,
          {},
          {
            "open-orpheus": [
              0,
              {},
              {
                "open-orpheus": [
                  1,
                  {},
                  Uint8Array [
                    102,
                    97,
                    107,
                    101,
                    45,
                    98,
                    105,
                    110,
                    97,
                    114,
                    121,
                  ],
                ],
                "package.json": [
                  1,
                  {},
                  Uint8Array [
                    123,
                    125,
                  ],
                ],
                "resources": [
                  0,
                  {},
                  {
                    "app.asar": [
                      1,
                      {},
                      Uint8Array [
                        102,
                        97,
                        107,
                        101,
                        45,
                        97,
                        115,
                        97,
                        114,
                      ],
                    ],
                  },
                ],
              },
            ],
          },
        ],
        "share": [
          0,
          {},
          {
            "applications": [
              0,
              {},
              {
                "open-orpheus.desktop": [
                  1,
                  {},
                  Uint8Array [
                    91,
                    68,
                    101,
                    115,
                    107,
                    116,
                    111,
                    112,
                    32,
                    69,
                    110,
                    116,
                    114,
                    121,
                    93,
                    10,
                    69,
                    120,
                    101,
                    99,
                    61,
                    111,
                    112,
                    101,
                    110,
                    45,
                    111,
                    114,
                    112,
                    104,
                    101,
                    117,
                    115,
                    10,
                  ],
                ],
              },
            ],
            "icons": [
              0,
              {},
              {
                "hicolor": [
                  0,
                  {},
                  {
                    "256x256": [
                      0,
                      {},
                      {
                        "apps": [
                          0,
                          {},
                          {
                            "open-orpheus.png": [
                              1,
                              {},
                              Uint8Array [
                                102,
                                97,
                                107,
                                101,
                                45,
                                112,
                                110,
                                103,
                              ],
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
]
`;
